Prevent wrapping on Markdown links.

--- a/assets/styles/_markdown.scss
+++ b/assets/styles/_markdown.scss
@@ -106,7 +106,8 @@
 
 		--color: var(--link--color);
 
-		color: var(--link--color);
+		color:       var(--link--color);
+		white-space: nowrap;
 	}
 
 	// Prominence for link-only paragraphs/li.
